# lazynacos

./: Cargo.toml  README.md
config/: dev.toml  local.toml
src/: api.rs  app.rs  config.rs  main.rs  resp.rs  ui.rs
src/api/: auth.rs  config.rs  namespace.rs
src/resp/: auth_login_resp.rs  config_list_resp.rs  namespace_list_resp.rs
