[package]
name = "lazynacos"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.13" # 配置文件解析
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1.21.3" #全局变量
serde_json = "1.0.140"
ratatui = "0.29.0"
tui-textarea = "0.7.0"